force-app/main/default/objects/Document_Checklist__c.object
<CustomObject>
    <description>Capture documents relevant to different processes that requires documents for verification</description>
    <fields>
        <fullName>Allowed_Document_Type__c</fullName>
        <description>Document Type that can bee offered to applicants for this checklist item</description>
        <inlineHelpText>Select allowed Document Types that can bee offered to applicants for this checklist item</inlineHelpText>
        <label>Allowed Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Instructions_Email__c</fullName>
        <description>Contains the instruction for the applicant to comply with the checklist. This is suited to email output from Exact target.</description>
        <inlineHelpText>Contains the instruction for the applicant to comply with the checklist.</inlineHelpText>
        <label>Applicant Instructions Email</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Instructions_UI__c</fullName>
        <description>Contains the instruction for the applicant to comply with the checklist. This is suited to UI output such as my.app.</description>
        <inlineHelpText>Contains the instruction for the applicant to comply with the checklist.</inlineHelpText>
        <label>Applicant Instructions UI</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Document Checklists</relationshipLabel>
        <relationshipName>Document_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Application</description>
        <inlineHelpText>Link to Application</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Document Checklist</relationshipLabel>
        <relationshipName>Document_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Requirement__c</fullName>
        <description>Used to describe what the checklist item is for</description>
        <label>Checklist Requirement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Qualification__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Link to Contact Qualification</description>
        <inlineHelpText>Link to Contact Qualification</inlineHelpText>
        <label>Contact Qualification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Contact_Qualification__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact_Qualification__c</referenceTo>
        <relationshipLabel>Document Checklist</relationshipLabel>
        <relationshipName>Document_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup directly to Contact to enable filtering of Qualification and Work Experience records.</description>
        <inlineHelpText>Lookup directly to Contact to enable filtering of Qualification and Work Experience records.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Document Checklist</relationshipLabel>
        <relationshipName>Document_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Request_Type__c</fullName>
        <description>Capture document request type to map documents with Callista</description>
        <label>Document Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Capture document type to map documents with Callista</description>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Contact_Qualification__c</fullName>
        <description>A formula field to indicate if the record has a lookup to the Contact Qualification</description>
        <formula>IF( ISBLANK(Contact_Qualification__c) , false, true)</formula>
        <inlineHelpText>Flag to indicate if the record has a lookup to the Contact Qualification</inlineHelpText>
        <label>Has Contact Qualification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Work_Experience__c</fullName>
        <description>A formula field to indicate if the record has a lookup to the Work Experience</description>
        <formula>IF( ISBLANK( Work_Experience__c ) , false, true)</formula>
        <inlineHelpText>Flag to indicate if the record has a lookup to the Work Experience</inlineHelpText>
        <label>Has Work Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Document Checklists</relationshipLabel>
        <relationshipName>Document_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_of_One_F__c</fullName>
        <description>Dummy field holding the value of 1 for each record to assist with reporting
    https://www.salesforce.com/video/296533/</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_DeveloperName__c</fullName>
        <description>Contains a copy the rule developer name that resulted in the creation of the checklist item.</description>
        <inlineHelpText>Contains a copy the rule developer name that resulted in the creation of the checklist item.</inlineHelpText>
        <label>Rule Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <description>Contains a copy the rule name that resulted in the creation of the checklist item.</description>
        <inlineHelpText>Contains a copy the rule name that resulted in the creation of the checklist item.</inlineHelpText>
        <label>Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Used to sort the rules results in order</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Meta data for checklist life-cycle</description>
        <inlineHelpText>Meta data for checklist life-cycle</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Insufficient</fullName>
                </value>
                <value>
                    <fullName>AutoCancelled</fullName>
                    <label>Auto Cancelled</label>
                </value>
                <value>
                    <fullName>ManualCancelled</fullName>
                    <label>Manual Cancelled</label>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Field use to map the type of the checklist to the task type required by work-relay.</description>
        <formula>IF(TEXT(Type__c) != &apos;&apos;, &apos;Task: &apos; + TEXT(Type__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Process where the checklist is relevant</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Course Prerequisite</fullName>
                </value>
                <value>
                    <fullName>GTE</fullName>
                </value>
                <value>
                    <fullName>Name Change</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Residency</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Work Experience</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Under 18</fullName>
                </value>
                <value>
                    <fullName>OSHC</fullName>
                </value>
                <value>
                    <fullName>Offer Conditions</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>AdditionalVisa</fullName>
                </value>
                <value>
                    <fullName>AdditionalResidency</fullName>
                </value>
                <value>
                    <fullName>Unit Prerequisite</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>Curriculum Vitae</fullName>
                </value>
                <value>
                    <fullName>Application Documents</fullName>
                </value>
                <value>
                    <fullName>Research Program</fullName>
                </value>
                <value>
                    <fullName>Previous Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <description>Combined field to form a unique ID formed as a combination of Application ID, Rule ID and Qualification or Work Experience IDs</description>
        <externalId>true</externalId>
        <inlineHelpText>Combined field to form a unique ID formed as a combination of Application ID, Rule ID and Qualification or Work Experience IDs</inlineHelpText>
        <label>Unique ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Work_Experience__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to Contact Work Experience</description>
        <inlineHelpText>Link to Contact Work Experience</inlineHelpText>
        <label>Work Experience</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Work_Experience__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Experience__c</referenceTo>
        <relationshipLabel>Document Checklist</relationshipLabel>
        <relationshipName>Document_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DC{YYYY}-{000000}</displayFormat>
        <label>Checklist Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklists</pluralLabel>
    <recordTypes>
        <fullName>Application_Assessment</fullName>
        <active>true</active>
        <description>Type of checklist relevant for assessing applications</description>
        <label>Application Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offer_Acceptance</fullName>
        <active>true</active>
        <description>Document checklist necessary for accepting offers.</description>
        <label>Offer Acceptance</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>